--- a/index.html
+++ b/index.html
@@ -2,56 +2,209 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8" />
-  <title>My GitHub Card</title>
+  <title>عشانك</title>
   <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      margin-top: 40px;
-      background: #0f172a;
-      color: #e5e7eb;
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
     }
 
-    .card-title {
-      font-size: 20px;
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: radial-gradient(circle at top, #1f2937 0, #020617 55%);
+      color: #e5e7eb;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 16px;
+    }
+
+    .screen {
+      width: 100%;
+      max-width: 360px;
+    }
+
+    /* الشاشة الأولى */
+    #screen1 {
+      text-align: center;
+    }
+
+    #screen1 h1 {
+      font-size: 24px;
+      margin-bottom: 12px;
+    }
+
+    #screen1 p {
+      font-size: 14px;
+      opacity: 0.8;
+      margin-bottom: 24px;
+    }
+
+    .main-card {
+      padding: 2px;
+      border-radius: 20px;
+      background: linear-gradient(135deg, #22c55e, #14b8a6, #0ea5e9);
+      box-shadow: 0 20px 45px rgba(0, 0, 0, 0.65);
+    }
+
+    .main-card-inner {
+      border-radius: 18px;
+      background: rgba(15, 23, 42, 0.96);
+      padding: 20px 16px 24px;
+    }
+
+    .main-card-title {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+
+    .main-card-text {
+      font-size: 14px;
+      opacity: 0.9;
+      margin-bottom: 20px;
+    }
+
+    .primary-btn {
+      padding: 14px 28px;
+      border-radius: 999px;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+      color: #fff;
+      background: linear-gradient(135deg, #6366f1, #ec4899, #f97316);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.6);
+      transition: transform 0.15s ease, box-shadow 0.15s ease;
+      width: 100%;
+    }
+
+    .primary-btn:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 16px 35px rgba(0, 0, 0, 0.7);
+    }
+
+    .primary-btn:active {
+      transform: translateY(0);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.6);
+    }
+
+    /* الشاشة الثانية */
+    #screen2 {
+      display: none;
+      text-align: center;
+    }
+
+    .grad-title {
+      font-size: 22px;
+      margin-bottom: 4px;
+    }
+
+    .grad-subtitle {
+      font-size: 14px;
+      opacity: 0.8;
       margin-bottom: 16px;
     }
 
-    .card {
+    .grad-card {
       display: inline-block;
-      padding: 20px;
-      border-radius: 16px;
+      padding: 2px;
+      border-radius: 20px;
       background: linear-gradient(135deg, #6366f1, #ec4899, #f97316);
       color: #fff;
+      box-shadow: 0 20px 45px rgba(0, 0, 0, 0.8);
+      max-width: 360px;
+      width: 100%;
     }
 
-    .card-inner {
-      background: rgba(15, 23, 42, 0.9);
-      padding: 16px;
-      border-radius: 12px;
+    .grad-card-inner {
+      background: rgba(15, 23, 42, 0.96);
+      padding: 18px 16px 22px;
+      border-radius: 18px;
     }
 
-    .card img {
-      max-width: 220px;
-      border-radius: 12px;
+    .grad-card img {
+      max-width: 100%;
+      border-radius: 14px;
       display: block;
       margin: 0 auto 12px;
+    }
+
+    .emoji {
+      font-size: 26px;
+      margin-bottom: 8px;
+    }
+
+    .note {
+      font-size: 13px;
+      opacity: 0.85;
+      margin-top: 4px;
     }
   </style>
 </head>
 <body>
-  <!-- هان الجملة فوق التدريج -->
-  <div class="card-title">شايفة التدريجااااااا 😏</div>
+  <div class="screen">
 
-  <div class="card">
-    <div class="card-inner">
-      <img src="my-photo.jpg" alt="My Photo" />
-      <h2>مرحبا 👋</h2>
-      <audio controls>
-        <source src="my-audio.mp3" type="audio/mpeg" />
-        المتصفح لا يدعم تشغيل الصوت.
-      </audio>
+    <!-- الشاشة الأولى -->
+    <div id="screen1">
+      <div class="main-card">
+        <div class="main-card-inner">
+          <h1>في شغلة صغيرة 👀</h1>
+          <p>مخصوصة عشانك، كبسي الزر وشوفي.</p>
+
+          <div class="main-card-title">جاهزة للهدية؟ 🎁</div>
+          <div class="main-card-text">
+            كبسة وحدة وبنروح مع بعض على شاشة تانية 😉
+          </div>
+
+          <button class="primary-btn" id="start-btn">
+            عشانك 💌
+          </button>
+        </div>
+      </div>
     </div>
+
+    <!-- الشاشة الثانية -->
+    <div id="screen2">
+      <div class="grad-title">شايفة التدريجااااااا 🌈</div>
+      <div class="grad-subtitle">هذا الكرت معمول بس عشانك</div>
+
+      <div class="grad-card">
+        <div class="grad-card-inner">
+          <div class="emoji">🎁</div>
+
+          <!-- صورتك -->
+          <img src="my-photo.jpg" alt="Your Photo" />
+
+          <!-- الصوت -->
+          <audio id="my-audio">
+            <source src="my-audio.mp3" type="audio/mpeg" />
+            المتصفح لا يدعم تشغيل الصوت.
+          </audio>
+
+          <p class="note">
+            إذا تأخر الصوت شوي، استني ثانية أو كبسي مرة ثانية ❤️
+          </p>
+        </div>
+      </div>
+    </div>
+
   </div>
+
+  <script>
+    const startBtn = document.getElementById('start-btn');
+    const screen1 = document.getElementById('screen1');
+    const screen2 = document.getElementById('screen2');
+    const audio = document.getElementById('my-audio');
+
+    startBtn.addEventListener('click', () => {
+      // إخفاء الشاشة الأولى وإظهار الثانية
+      screen1.style.display = 'none';
+      screen2.style.display = 'block';
+
+      // تشغيل الصوت كجزء من تفاعل المستخدم (مسموح بالمتصفحات)
+      audio.play().catch(() => {});
+    });
+  </script>
 </body>
 </html>
