--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 
     <!-- الشاشة الثانية -->
     <div id="screen2">
-      <div class="grad-title">شايفة التدريجااااااا 🌈</div>
-      <div class="grad-subtitle">هذا الكرت معمول بس عشانك</div>
+      <div class="grad-title">شايفة التدريجااااااا 💇</div>
+      <div class="grad-subtitle"></div>
 
       <div class="grad-card">
         <div class="grad-card-inner">
